--- a/STSEval/app/templates/app/index.html
+++ b/STSEval/app/templates/app/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>STSEval</title>
+        <title>STS Live Gym</title>
         {% load staticfiles %}
         <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
+        <link rel="shortcut icon" href="{% static 'app/images/favicon.png' %}"/>
         <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
     </head>
     <div class="navbar navbar-inverse navbar-fixed-top">
