login and safari fix

--- a/STSEval/account/templates/account/login.html
+++ b/STSEval/account/templates/account/login.html
@@ -32,5 +32,5 @@
 </div>
 {% endblock %}
 {% block scripts %}
-    <script src="{% static 'app/scripts/check_browser.js' %}"></script>
+    <script src="{% static 'app/scripts/check_browser.js' %}?v=1"></script>
 {% endblock %}
