--- a/STSEval/app/templates/app/video_scoreboard.html
+++ b/STSEval/app/templates/app/video_scoreboard.html
@@ -2,7 +2,7 @@
 <div>
     {% for score in scores %}
      <div class="d-flex justify-content-between scoreboard-section pl-1 pr-1">
-        <div>{{score.abbv}}</div>
+        <div>{{score.team}}</div>
         <div>{{score.score}}</div>
     </div>
     {% endfor %}
