--- a/STSEval/app/templates/app/select_session.html
+++ b/STSEval/app/templates/app/select_session.html
@@ -94,7 +94,7 @@
 
    
     function FillSession() {
-        $("#divSessionList").load("/management/session_list/?comp="+ SelectedComp);
+        $("#divSessionList").load("/management/session_list/?comp="+ SelectedComp + "&current=1");
     }
 
 </script>
