--- a/STSEval/app/templates/app/select_session.html
+++ b/STSEval/app/templates/app/select_session.html
@@ -66,7 +66,7 @@
         SelectedDisc = discIn;
         SelectedComp = -1;
         $("#divCompetitions").removeClass("ui-disabled");
-        $("#divCompList").load("/management/competition_list_all/?disc=" + SelectedDisc + "");
+        $("#divCompList").load("/management/competition_list_all/?disc=" + SelectedDisc + "&current=1");
         $("#divSessionList").empty();
         $("#divSessions").addClass("ui-disabled");
         $("#btnView").addClass("ui-disabled");
@@ -94,7 +94,7 @@
 
    
     function FillSession() {
-        $("#divSessionList").load("/management/session_list/?comp="+ SelectedComp + "&current=1");
+        $("#divSessionList").load("/management/session_list/?comp="+ SelectedComp);
     }
 
 </script>
