--- a/STSEval/app/templates/app/spectate.html
+++ b/STSEval/app/templates/app/spectate.html
@@ -69,7 +69,7 @@
 <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
 <script src="https://vjs.zencdn.net/7.6.6/video.js"></script>
-<script src="{% static 'app/scripts/stream_listener_spectator.js' %}"></script>
+<script src="{% static 'app/scripts/stream_listener_spectator.js' %}?v=1"></script>
 <script type="text/javascript">
     var ev = new Array();
     {% if display_type == 'single' %}
