--- a/STSEval/streaming/templates/streaming/camera.html
+++ b/STSEval/streaming/templates/streaming/camera.html
@@ -62,7 +62,7 @@
             </div>
              
         </div>
-        <div class="col-md-4 col-sm-12" id="publish-settings" style="display:none">
+        <div class="col-md-4 col-sm-12" id="publish-settings" >
             <form id="publish-settings-form">
             <div class="row">
                 <div class="col-12">
