--- a/STSEval/app/templates/app/overview.html
+++ b/STSEval/app/templates/app/overview.html
@@ -10,7 +10,7 @@
         <div class="col-xl-6 col-12 pr-4" align="right">
             <div id="play-video-container" class="live-container d-flex align-items-center justify-content-center">
                 <div id="player-waiting" style="height:480px" class="align-items-center d-flex"><h1>Waiting for Camera</h1></div>
-                <video id="player-video" autoplay playsinline muted controls class="live-video" style="display:none"></video>
+                <video id="player-video" autoplay playsinline controls class="live-video" style="display:none"></video>
                 
             </div><div id="divAthlete" align="center"></div>
             
