--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -22,12 +22,12 @@
                 </select>
 
             </div>-->
-            <video id="video-playback"  style="max-width:854px;max-height:720px;display:none;width:100%;min-height:480px" muted controls webkit-playsinline>
+            <video id="video-playback"  style="max-width:854px;max-height:720px;display:none;width:100%;min-height:480px" controls webkit-playsinline>
 		        Your browser does not support the video tag.
 	        </video>
             <div id="play-video-container" class="live-container d-flex align-items-center justify-content-center">
                 <div id="player-waiting" style="height:480px;display:flex" class="align-items-center"><h1>Waiting for Camera</h1></div>
-                <video id="player-video" class="live-video" autoplay playsinline muted controls style="display:none"></video>
+                <video id="player-video" class="live-video" autoplay playsinline controls style="display:none"></video>
             </div>
                     
             <div id="divSpeedSlider" align="right" style="width:100%;height:33px;display:none">
