--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -438,7 +438,7 @@ input[type="checkbox"].input-validation-error {
 }
 
 .live-video {
-    max-width: 854px;
+    max-width: 100%;
     max-height: 500px;
     min-height: 480px;
 }
