--- a/STSEval/app/templates/app/spectate.html
+++ b/STSEval/app/templates/app/spectate.html
@@ -101,9 +101,9 @@
     if (ev[2] != undefined)
         SetEventListeners(2);
 
-    if (Hls.isSupported())
-        alert("HLS Supported");
-    alert("Can Play = " + document.getElementById("player-video1").canPlayType('application/vnd.apple.mpegurl'));
+    //if (Hls.isSupported())
+        //alert("HLS Supported");
+   // alert("Can Play = " + document.getElementById("player-video1").canPlayType('application/vnd.apple.mpegurl'));
 
     function SetEventListeners(which) {
         if (refs[which] != undefined)
