vibration, d1 dot, explination text

--- a/STSEval/app/templates/app/coach.html
+++ b/STSEval/app/templates/app/coach.html
@@ -75,7 +75,7 @@
             }
             else if (Status == "N") {
                 StatusDotsYellow();
-                $("#divStatus").html("RAISE HAND").addClass("timer-yellow").removeClass("timer-green").removeClass("timer-red");
+                $("#divStatus").html("GET READY").addClass("timer-yellow").removeClass("timer-green").removeClass("timer-red");
                 $("#" + $("#hdnUpNext").val()).addClass("status-dot-yellow").removeClass("status-dot-green").removeClass("status-dot-red");
             }
             else if (Status == "S") {
