--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -458,3 +458,7 @@ input[type="checkbox"].input-validation-error {
     background-color: #4848bd;
     border: 1px solid #353535;
 }
+
+.navbar-dark .navbar-nav .nav-link {
+    color: rgba(255,255,255,.75);
+}
