--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -3,7 +3,9 @@
 {% block content %}
 {% load staticfiles %}
 {% include "app/dot_change.html" %}
+{% if loadroutine == '' %}
 {% include "chat/chat.html" %}
+{% endif %}
 <div id="AccountabilityReportBlackOut" style="width:100%;height:100%;background-color:#000000;opacity: .3;position:fixed;z-index:103;display:none" onclick="CloseAccountabilityReport()"></div>
 <div id="divAccountabilityReport" style="position:absolute;z-index:104;text-align:center;padding:5px;overflow:auto;display:none;background-color:rgb(97, 97, 106);color:white;top:10%;left:35%;width:40%"  class="rounded"></div>
 <div align="center">
@@ -37,14 +39,38 @@
                 <div id="player-waiting" style="height:480px;display:flex" class="align-items-center"><h1>Waiting for Camera</h1></div>
                 <video id="player-video" class="live-video" autoplay playsinline controls style="display:none"></video>
             </div>
-                    
-            <div id="divSpeedSlider" align="right" style="width:100%;height:33px;display:none">
-	            <table><tr>
-	                <td>Video Review Speed:</td>
-	                <td align="left" width="320px"> <input style="z-index:102" id="sldSpeed" type="range" data-style="none" data-theme="b" data-highlight="true" min="0" max="1.25" value="1" step=".25" onchange="ChangeVideoSpeed(this.value)" /></td>
-	                <td align="left" width="90px"><div style="display:inline" id="range">Full</div></td>
-                </tr></table>
-	        </div>
+            {% if loadroutine != '' %} 
+                <div class="row no-gutters" style="max-width:854px;">
+                    <div class="col-xl-3 col-3">
+                        <div class="row no-gutters">
+                            <div class="col-3 text-center">
+                                <div style="cursor:pointer" class="font-weight-bold" onmouseup="VideoStepEnd();" onmouseout="VideoStepEnd();" onmousedown="VideoStep(-5);" title="-5 Frames">-5</div>
+                            </div>
+                            <div class="col-3 text-center">
+                                <div style="cursor:pointer" class="font-weight-bold" onmouseup="VideoStepEnd();" onmouseout="VideoStepEnd();" onmousedown="VideoStep(-1);" title="-1 Frames">-1</div>
+                            </div>
+                          
+                            <div class="col-3 text-center">
+                                <div style="cursor:pointer" class="font-weight-bold" onmouseup="VideoStepEnd();" onmouseout="VideoStepEnd();" onmousedown="VideoStep(1);" title="+1 Frames">+1</div>
+                            </div>
+                            <div class="col-3 text-center">
+                                <div style="cursor:pointer" class="font-weight-bold" onmouseup="VideoStepEnd();" onmouseout="VideoStepEnd();" onmousedown="VideoStep(5);" title="+5 Frames">+5</div>
+                            </div>
+                        </div>
+                    </div>
+                   
+                    <div id="VidSpeedArea" class="col-9 col-xl-9">
+                         <div id="range" class="pr-2" style="display:inline-block">Full</div>
+                            
+                        <div id="SpeedSlider" style="display:inline-block"><input style="z-index:102" id="sldSpeed" type="range" data-style="none" data-theme="b" data-highlight="true" min="0" max="1.25" value="1" step=".25" onchange="ChangeVideoSpeed(this.value)" /></div>
+                       
+                    </div>
+
+                    <div id="VidHudArea" class="col-12"></div>
+
+                </div>
+            {% endif %}
+          
             <div id="divDotsHolder" style="position:relative;max-width:852px;height:100px;display:flex">
 	            <div id="divDotsArea" class="DotsArea flex-grow-1" style="max-width:852px;height:100px;">
 	           
@@ -130,9 +156,7 @@
 	                    <tr><td id="tdTotal" align="right" style="text-decoration:underline">Total Score:</td><td id="divTotalScore" style="text-decoration:underline">0.0</td></tr>
 	                </table>
                 {% endif %}
-            <div id="divSpeedSpacer" align="right" style="height:33px;display:none">  
-                <a data-mini="true" data-role="button" href="#" onclick="SetBoardStrikeClick(); return false" id="btnSetBoardStrike" style="display:inline-block">Set Board Strike</a>
-            </div>
+           
             <br/>
 	        <div>
 	            <div>
@@ -228,6 +252,7 @@
     var CurrentAthlete = -1;
     var ScoringType;
     var StartListChange = -1;
+    var FrameStepTimer;
     var db = firebase.firestore();
     for (var i = 1; i <= 4; i++) {
         EJudgesReady[i] = false;
@@ -1338,6 +1363,42 @@
             alert("Your camera account is not setup, contact the meet administrator");
             return "error";
         }
+    }
+
+
+    function ChangeVideoSpeed(speed)
+    {
+         let vp = document.getElementById("video-playback");
+        
+          vp.playbackRate = speed;
+          vidSpeed = speed;
+          var speedText;
+          if (speed==0)
+            speedText = "Stopped";
+          else if (speed==.25)
+            speedText = "1/4";
+          else if (speed==.5)
+            speedText = "1/2";
+          else if (speed==.75)
+            speedText = "3/4";
+          else if (speed==1)
+            speedText = "Full";
+          else if (speed==1.25)
+            speedText = "125%";
+    
+          document.getElementById("range").innerHTML=speedText;
+    }
+
+    function VideoStep(amountIn) {
+        let vp = document.getElementById("video-playback");
+        vp.pause();
+        var now=vp.currentTime;
+        vp.currentTime = now + amountIn / 30;
+        FrameStepTimer=setTimeout("VideoStep(" + amountIn + ")",250);
+    }
+
+    function VideoStepEnd() {
+        clearTimeout(FrameStepTimer);
     }
 
 
