mobile formatting fix

--- a/STSEval/app/templates/app/select_session.html
+++ b/STSEval/app/templates/app/select_session.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div align="center" style="margin:10px;padding:0">
     <div>
-        <div id="divDisc" style="vertical-align: top;padding:3px;height:254px;display:inline-block;margin-right:30px;">
+        <div id="divDisc" style="vertical-align: top;padding:3px;display:inline-block;margin-right:30px;">
 		    <div id="divDiscHeader" style="padding-bottom:5px;font-size:22px;font-weight:bold;text-align:center">Discipline</div>
 		    <div id="divDiscList" class="listbox  setup-box" style="">
                 {% for disc in discs %}
